--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     padding: 0px;
 }
 
-body{
+body {
     background-color: #F5F5F5;
     font-family: 'VT323', monospace;
 }
@@ -24,7 +24,7 @@ body{
     left: 15px;
 }
 
- .topmenu h2 {
+.topmenu h2 {
     text-align: center;
     padding-bottom: 35px;
 }
@@ -35,10 +35,12 @@ body{
     top: 292px;
 }
 
-
+.leftsidemenu {
+    margin-left: 4px;
+}
 
 #centeredmenu {
-    float:left;
+    float: left;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -46,7 +48,7 @@ body{
 }
 
 #centeredmenu ul {
-    clear:left;
+    clear: left;
     float: left;
     list-style: none;
     position: relative;
@@ -55,34 +57,36 @@ body{
 }
 
 #centeredmenu ul li {
-   display:block;
-   float:left;
-   list-style:none;
-   margin:0;
-   padding: 0;
-   position:relative;
-   right:50%;
-   font-family: 'VT323', monospace;
+    display: block;
+    float: left;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    right: 50%;
+    font-family: 'VT323', monospace;
+}
 
-}
 #centeredmenu ul li a {
-   display:block;
-   margin:0 0 0 3px;
-   padding:3px 20px;
-   background:#ddd;
-   color:#000;
-   text-decoration:none;
-   line-height:1.3em;
+    display: block;
+    margin: 0 0 0 3px;
+    padding: 3px 20px;
+    background: #ddd;
+    color: #000;
+    text-decoration: none;
+    line-height: 1.3em;
 }
+
 #centeredmenu ul li a:hover {
-   background:#369;
-   color:#fff;
+    background: #369;
+    color: #fff;
 }
+
 #centeredmenu ul li a.active,
 #centeredmenu ul li a.active:hover {
-   color:#fff;
-   background:#000;
-   font-weight:bold;
+    color: #fff;
+    background: #000;
+    font-weight: bold;
 }
 
 #loginmyboy {
@@ -91,32 +95,30 @@ body{
     right: 5px;
     order: 2;
     text-align: right;
-
 }
 
 .nonsense {
-  text-align: center;
-  margin: 15px 10%;
-  overflow: hidden;
-  white-space: nowrap;
-  font-size: 20px;
+    text-align: center;
+    margin: 15px 10%;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 20px;
 }
 
 .content h2 {
-  text-align: center;
-  font-size: 50px;
-  text-transform: uppercase;
-  direction: rtl;
-  unicode-bidi: bidi-override;
+    text-align: center;
+    font-size: 50px;
+    text-transform: uppercase;
+    direction: rtl;
+    unicode-bidi: bidi-override;
 }
 
 .idiot {
-  margin: 15px 25%;
-  font-size: 20px;
-  direction: rtl;
-  unicode-bidi: bidi-override;
-  text-align: center;
-
+    margin: 15px 25%;
+    font-size: 20px;
+    direction: rtl;
+    unicode-bidi: bidi-override;
+    text-align: center;
 }
 
 div img {
@@ -127,50 +129,61 @@ div img {
 }
 
 #imagenon {
-  width: 230px;
+    width: 230px;
 }
 
 .container1 {
-  text-align: center;
+    text-align: center;
 }
 
 .container1 h3 {
-  margin: 20px;
-  font-size: 20px;
+    margin: 20px;
+    font-size: 20px;
 }
 
 #signup {
-  text-align: left;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 240px;
-  }
-
-.othersupport {
-
+    text-align: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 240px;
 }
 
+.othersupport {}
+
 .othersupport h3 {
-  margin-top: 50px;
-  margin-bottom: 20px;
-  text-align: center;
-  font-size: 20px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .othersupport table tr th {
-  border: 3px solid #A4A4A4;
+    border: 3px solid #A4A4A4;
 }
 
-.othersupport tr, .othersupport td {
-  padding: 10px;
-  max-width: 450px;
+.othersupport tr,
+.othersupport td {
+    padding: 10px;
+    max-width: 450px;
 }
 
 .othersupport table {
-  margin-left: auto;
-  margin-right: auto;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+.filesystem {
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.filesystem td,
+.filesystem th {
+    padding: 10px;
+    font-size: 20px;
 }
